[package]
name = "ppool"
version = "0.1.0"
authors = ["Aloxaf <aloxafx@gmail.com>"]
edition = "2018"

[dependencies]
app_dirs = "^1.2.1"
clap = { version = "2.32", features = ["yaml"] }
env_logger = "0.6"
failure = "0.1.5"
itertools = "0.8"
lazy_static = "1.3.0"
libxml = "0.2.6"
log = "0.4"
rand = "0.6"
regex = "1"
reqwest = "0.9"
rocket = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
threadpool = "1.0"
toml = "0.4"

[profile.release]
# 取消注释以开启 LTO, 大幅减小体积 & 增加编译时间
# lto = true