[package]
name = "ppool"
version = "0.1.0"
authors = ["Aloxaf <aloxafx@gmail.com>"]
edition = "2018"

[dependencies]
app_dirs = "^1.2.1"
env_logger = "0.7"
failure = "0.1.8"
itertools = "0.9"
lazy_static = "1.4.0"
libxml = "0.2"
log = "0.4"
owning_ref = "0.4"
rand = "0.7"
regex = "1"
reqwest = "0.9"
rocket = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
structopt = "0.3"
threadpool = "1.8"
toml = "0.5"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[profile.release]
# 取消注释以开启 LTO, 大幅减小体积 & 增加编译时间
# lto = true