[package]
name = "ppool_spider"
version = "0.1.0"
authors = ["Aloxaf <aloxafx@gmail.com>"]
edition = "2018"

[features]
default = []
local = []

[dependencies]
failure = "0.1.5"
libxml = "0.2.6"
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.6"
